<resources>
    <string name="app_name">Quake III</string>
    <string name="refreshButton">Refresh</string>
    <string name="mapButtonName">Map</string>
    <string name="simulationButtonName">Simulation</string>
    <string name="earthquakeListButtonName">Earthquake List</string>
    <string name="optionsButtonName">Options</string>
    <string name="dateViewName">   Date   </string>
    <string name="timeViewName">Time  </string>
    <string name="latitudeViewName"> LAT </string>
    <string name="longitudeViewName">LONG</string>
    <string name="depthViewName">   Depth  </string>
    <string name="magnitutdeViewName">Magnitutde</string>
    <string name="locationViewName">  Location</string>
    <string name="mdViewName">MD </string>
    <string name="mlViewName">ML </string>
    <string name="mwViewName">Mw</string>
    <string name="fromZeroRadio">All</string>
    <string name="fromOneRadio">>1</string>
    <string name="fromTwoRadio">>2</string>
    <string name="fromThreeRadio">>3</string>
    <string name="fromFourRadio">>4</string>
    <string name="fromFiveRadio">>5</string>
    <string name="fromSixRadio">>6</string>
    <string name="fromSevenRadio">>7</string>
    <string name="allRadio">All</string>
    <string name="twoDaysRadio">2D</string>
    <string name="oneDaysRadio">1D</string>
    <string name="twelveHoursRadio">12H</string>
    <string name="sixHoursRadio">6H</string>
    <string name="threeHoursRadio">3H</string>
    <string name="oneHourRadio">1H</string>
    <string name="city_prompt">Choose a city</string>
    <string name="notification">Notification</string>
    <string name="notificationConfiguration">Notification Configuration</string>
    <string name="applyButton">Apply</string>
    <string name="cancelButton">Cancel</string>

    <string-array name="city_arrays">
        <item>Türkiye</item>
        <item>İstanbul</item>
        <item>Ankara</item>
        <item>İzmir</item>
        <item>Çanakkale</item>
        <item>Adana</item>
        <item>Elazığ</item>
        <item>Bursa</item>
    </string-array>
</resources>
