<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EarthquakeListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/firstSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/common_full_open_on_phone" />

                <ImageButton
                    android:id="@+id/firstBig"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/dialog_frame" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupML"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fromZeroRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fromZeroRadio" />

                    <RadioButton
                        android:id="@+id/fromOneRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fromOneRadio" />

                    <RadioButton
                        android:id="@+id/fromTwoRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fromTwoRadio" />

                    <RadioButton
                        android:id="@+id/fromThreeRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fromThreeRadio" />

                    <RadioButton
                        android:id="@+id/fromFourRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fromFourRadio" />

                    <RadioButton
                        android:id="@+id/fromFiveRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fromFiveRadio" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroupTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/allTimeRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/allRadio" />

                    <RadioButton
                        android:id="@+id/oneDayRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oneDaysRadio" />

                    <RadioButton
                        android:id="@+id/twelveHoursRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twelveHoursRadio" />

                    <RadioButton
                        android:id="@+id/sixHoursRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sixHoursRadio" />

                    <RadioButton
                        android:id="@+id/threeHoursRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/threeHoursRadio" />

                    <RadioButton
                        android:id="@+id/oneHourRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oneHourRadio" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middleLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/pingListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
