<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parentLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/fromOneRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromOneRadio" />

            <RadioButton
                android:id="@+id/fromTwoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromTwoRadio" />

            <RadioButton
                android:id="@+id/fromThreeRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromThreeRadio" />

            <RadioButton
                android:id="@+id/fromFourRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromFourRadio" />

            <RadioButton
                android:id="@+id/fromFiveRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromFiveRadio" />

            <RadioButton
                android:id="@+id/fromSixRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromSixRadio" />

            <RadioButton
                android:id="@+id/fromSevenRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromSevenRadio" />


        </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middleLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:orientation="vertical">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>