<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical">

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/middleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="29dp">

            <Button
                android:id="@+id/mapButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/mapButtonName"
                app:layout_constraintBottom_toTopOf="@+id/simulationButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/simulationButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/simulationButtonName"
                app:layout_constraintBottom_toTopOf="@+id/earthquakeListButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapButton" />

            <Button
                android:id="@+id/earthquakeListButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/earthquakeListButtonName"
                app:layout_constraintBottom_toTopOf="@+id/optionsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/simulationButton" />

            <Button
                android:id="@+id/optionsButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/optionsButtonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/earthquakeListButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>